# sundials-rs

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  sundials-rs-publish-steps.md
sundials-rs/: Cargo.toml  GUIDE.md  README.md
sundials-rs-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs  wrapper.h
sundials-rs-sys/pregenerated/: bindings.rs
sundials-rs-sys/src/: lib.rs
sundials-rs/examples/: robertson_cvode.rs  robertson_cvodes_fsa.rs  robertson_ida.rs  robertson_idas_fsa.rs  robertson_parallel.rs
sundials-rs/src/: context.rs  cvode.rs  cvodes.rs  error.rs  ida.rs  idas.rs  lib.rs  linear_solver.rs  matrix.rs  nvector.rs
